src/test/resources/sem/bad/prog8.ilang
routine main() is
  var a : array[] integer
end
